[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/DayLabel.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DayPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="DayPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DayLabel" type="Label" parent="DayPanel/CenterContainer"]
margin_left = 494.0
margin_top = 293.0
margin_right = 530.0
margin_bottom = 307.0
text = "Day 1"
script = ExtResource( 1 )

[node name="AgencyPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="AgencyPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AgencyPanel/CenterContainer"]
margin_left = 413.0
margin_top = 269.0
margin_right = 611.0
margin_bottom = 331.0

[node name="LeftWing" type="Button" parent="AgencyPanel/CenterContainer/VBoxContainer"]
margin_right = 198.0
margin_bottom = 20.0
text = "Left Wing Agency"

[node name="RightWing" type="Button" parent="AgencyPanel/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 198.0
margin_bottom = 44.0
text = "Right Wing Agency"

[node name="Label" type="Label" parent="AgencyPanel/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 198.0
margin_bottom = 62.0
text = "Select agency to work for today"

[node name="NewspaperCreationPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="NewspaperCreationPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="NewspaperCreationPanel/CenterContainer"]
margin_left = 312.0
margin_top = 100.0
margin_right = 712.0
margin_bottom = 500.0
rect_min_size = Vector2( 400, 400 )
scroll_horizontal_enabled = false

[node name="Paper" type="VBoxContainer" parent="NewspaperCreationPanel/CenterContainer/ScrollContainer"]
margin_left = 124.0
margin_right = 275.0
margin_bottom = 259.0
size_flags_horizontal = 6
alignment = 1

[node name="HSeparator3" type="HSeparator" parent="NewspaperCreationPanel/CenterContainer/ScrollContainer/Paper"]
margin_right = 151.0
margin_bottom = 4.0

[node name="Topic" type="Label" parent="NewspaperCreationPanel/CenterContainer/ScrollContainer/Paper"]
margin_top = 8.0
margin_right = 151.0
margin_bottom = 22.0
text = "Topic is ABCDEFGHIJK"
align = 1

[node name="HSeparator2" type="HSeparator" parent="NewspaperCreationPanel/CenterContainer/ScrollContainer/Paper"]
margin_top = 26.0
margin_right = 151.0
margin_bottom = 30.0

[node name="ArticleTitle" type="OptionButton" parent="NewspaperCreationPanel/CenterContainer/ScrollContainer/Paper"]
margin_top = 34.0
margin_right = 151.0
margin_bottom = 54.0
text = "Article Title"

[node name="TextChoice" type="OptionButton" parent="NewspaperCreationPanel/CenterContainer/ScrollContainer/Paper"]
margin_top = 58.0
margin_right = 151.0
margin_bottom = 78.0
text = "Select Introduction"

[node name="Imagechoice" type="OptionButton" parent="NewspaperCreationPanel/CenterContainer/ScrollContainer/Paper"]
margin_left = 29.0
margin_top = 82.0
margin_right = 122.0
margin_bottom = 152.0
size_flags_horizontal = 4
icon = ExtResource( 3 )
items = [ "", ExtResource( 3 ), false, 0, null ]
selected = 0

[node name="CaptionChoice" type="OptionButton" parent="NewspaperCreationPanel/CenterContainer/ScrollContainer/Paper"]
margin_top = 156.0
margin_right = 151.0
margin_bottom = 176.0
text = "Select Caption"

[node name="StudyChoice" type="OptionButton" parent="NewspaperCreationPanel/CenterContainer/ScrollContainer/Paper"]
margin_top = 180.0
margin_right = 151.0
margin_bottom = 200.0
text = "Select Study"

[node name="HSeparator" type="HSeparator" parent="NewspaperCreationPanel/CenterContainer/ScrollContainer/Paper"]
margin_top = 204.0
margin_right = 151.0
margin_bottom = 208.0

[node name="Button" type="Button" parent="NewspaperCreationPanel/CenterContainer/ScrollContainer/Paper"]
margin_left = 46.0
margin_top = 212.0
margin_right = 105.0
margin_bottom = 251.0
rect_min_size = Vector2( 0, 39 )
size_flags_horizontal = 4
text = "Publish"

[node name="HSeparator4" type="HSeparator" parent="NewspaperCreationPanel/CenterContainer/ScrollContainer/Paper"]
margin_top = 255.0
margin_right = 151.0
margin_bottom = 259.0

[node name="BillPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="BillPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BillPanel/CenterContainer"]
margin_left = 458.0
margin_top = 212.0
margin_right = 565.0
margin_bottom = 388.0

[node name="HSeparator5" type="HSeparator" parent="BillPanel/CenterContainer/VBoxContainer"]
margin_right = 107.0
margin_bottom = 4.0

[node name="Label" type="Label" parent="BillPanel/CenterContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 107.0
margin_bottom = 22.0
text = "Finances"
align = 1

[node name="HSeparator6" type="HSeparator" parent="BillPanel/CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 107.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="BillPanel/CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 107.0
margin_bottom = 58.0
text = "Bills"

[node name="CheckBox2" type="CheckBox" parent="BillPanel/CenterContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 107.0
margin_bottom = 86.0
text = "Connections"

[node name="CheckBox3" type="CheckBox" parent="BillPanel/CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 107.0
margin_bottom = 114.0
text = "Interview"

[node name="Money" type="HSeparator" parent="BillPanel/CenterContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 107.0
margin_bottom = 122.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentMoney" type="Label" parent="BillPanel/CenterContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 107.0
margin_bottom = 140.0
text = "$10"

[node name="CurrentExpenses" type="Label" parent="BillPanel/CenterContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 107.0
margin_bottom = 158.0
text = "-$5"

[node name="NewMoneyAmount" type="Label" parent="BillPanel/CenterContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 107.0
margin_bottom = 176.0
text = "$5"
